[gd_scene load_steps=11 format=3 uid="uid://ong02bke83e8"]

[ext_resource type="Script" uid="uid://c4nqyslqgmcu1" path="res://scripts/UI/puzzle_ui.gd" id="1_ln3n1"]
[ext_resource type="AudioStream" uid="uid://n161s82cyown" path="res://sounds/doors/code_door/success_sound.mp3" id="2_b61pq"]
[ext_resource type="Texture2D" uid="uid://dixplrijdotav" path="res://sprites/UI/terminales/terminal_salon_101/terminal_base.png" id="2_lb3mf"]
[ext_resource type="AudioStream" uid="uid://cbqtodk17mj11" path="res://sounds/doors/code_door/error_sound.wav" id="3_lb3mf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ln3n1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ln3n1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4nqj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0qlj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b61pq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lb3mf"]

[node name="PuzzleUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ln3n1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -72.5
offset_right = 105.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ln3n1")

[node name="BackgroundImage" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lb3mf")
expand_mode = 1
stretch_mode = 5

[node name="ButtonA" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 59.5
offset_right = 100.0
offset_bottom = 75.5
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ln3n1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v4nqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_w0qlj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b61pq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lb3mf")

[node name="ButtonB" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 110.0
offset_top = 59.5
offset_right = 183.0
offset_bottom = 75.5
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ln3n1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v4nqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_w0qlj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b61pq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lb3mf")

[node name="ButtonC" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 80.5
offset_right = 100.0
offset_bottom = 96.5
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ln3n1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v4nqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_w0qlj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b61pq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lb3mf")

[node name="ButtonD" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 110.0
offset_top = 80.5
offset_right = 183.0
offset_bottom = 96.5
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ln3n1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v4nqj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_w0qlj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b61pq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lb3mf")

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.5, 0.4)
focus_mode = 0
text = "X"

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b61pq")

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lb3mf")

[connection signal="pressed" from="Panel/ButtonA" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="Panel/ButtonB" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="Panel/ButtonC" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="Panel/ButtonD" to="." method="_on_button_pressed" binds= [3]]
